fix rights logotype CSS
that was messed up accidentally in #974

Ref #980

--- a/app/assets/stylesheets/local/rights_statements.scss
+++ b/app/assets/stylesheets/local/rights_statements.scss
@@ -16,14 +16,18 @@
 
   // for rightsstatements.org style, we have a few words, and we make them
   // into a logo lockup. Not for creative-commons-org style.
-  &.rights-statements-org .rights-statement-label {
-    float: left;
-    display: inline-block;
-    font-size: 1.1875rem;
-    line-height: 1.375rem;
-    text-transform: uppercase;
-    letter-spacing: $small-caps-letter-spacing;
-    font-weight: $semi-bold-weight;
+  &.rights-statements-org {
+    .rights-statement-label {
+      display: inline-block;
+      font-size: 1.1875rem;
+      line-height: 1.375rem;
+      text-transform: uppercase;
+      letter-spacing: $small-caps-letter-spacing;
+      font-weight: $semi-bold-weight;
+    }
+    .rights-statement-logo {
+      float: left;
+    }
   }
 
   &.creative-commons-org  {
